// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/panel/Settings/GeneralSettings.jsx Snapshot tests with react-test-renderer GeneralSettings is rendered correctly with falsy props 1`] = `
<div
  className="s-tabs-panel"
>
  <div
    className="row"
  >
    <div
      className="columns"
    >
      <h3>
        settings_trackers
      </h3>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={false}
            id="settings-auto-update"
            name="enable_autoupdate"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-auto-update"
          >
            settings_auto_update
          </label>
          <div
            className="s-checkbox-label"
          >
            <span
              id="last-updated-span"
            >
              settings_last_update
               
            </span>
            <span
              id="last-updated-span-value"
            >
              
            </span>
            <span
              className="s-blue-header"
              id="update-now-span"
              onClick={[Function]}
            >
               
            </span>
          </div>
        </div>
      </div>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={false}
            id="settings-show-patterns"
            name="show_tracker_urls"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-show-patterns"
          >
            <span>
              settings_show_patterns
            </span>
          </label>
          <div
            className="s-tooltip-up"
            data-g-tooltip="settings_show_patterns_tooltip"
          >
            <img
              className="s-question"
              src="../../app/images/panel/icon-information-tooltip.svg"
            />
          </div>
        </div>
      </div>
      <h3
        className="s-special"
      >
        settings_highlight_trackers
      </h3>
      <div
        className="s-tooltip-down-click-to-play-img"
        data-g-tooltip="settings_highlight_trackers_tooltip"
      >
        <img
          className="s-question"
          src="../../app/images/panel/icon-information-tooltip.svg"
        />
      </div>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={false}
            id="settings-enable-click2play"
            name="enable_click2play"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-enable-click2play"
          >
            settings_required_trackers
          </label>
        </div>
      </div>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={false}
            id="settings-replace-social"
            name="enable_click2play_social"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-replace-social"
          >
            settings_replace_social
          </label>
        </div>
      </div>
      <h3>
        settings_blocking
      </h3>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={false}
            id="settings-individual-trackers"
            name="toggle_individual_trackers"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-individual-trackers"
          >
            <span>
              settings_individual_trackers
            </span>
          </label>
          <div
            className="s-tooltip-up"
            data-g-tooltip="settings_individual_trackers_tooltip"
          >
            <img
              className="s-question"
              src="../../app/images/panel/icon-information-tooltip.svg"
            />
          </div>
        </div>
      </div>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={false}
            id="settings-allow-trackers"
            name="ignore_first_party"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-allow-trackers"
          >
            <span>
              settings_allow_trackers
            </span>
          </label>
          <div
            className="s-tooltip-up"
            data-g-tooltip="settings_allow_trackers_tooltip"
          >
            <img
              className="s-question"
              src="../../app/images/panel/icon-information-tooltip.svg"
            />
          </div>
        </div>
      </div>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={false}
            id="settings-block-trackers"
            name="block_by_default"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-block-trackers"
          >
            settings_block_trackers
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`app/panel/Settings/GeneralSettings.jsx Snapshot tests with react-test-renderer GeneralSettings is rendered correctly with truthy props 1`] = `
<div
  className="s-tabs-panel"
>
  <div
    className="row"
  >
    <div
      className="columns"
    >
      <h3>
        settings_trackers
      </h3>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={true}
            id="settings-auto-update"
            name="enable_autoupdate"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-auto-update"
          >
            settings_auto_update
          </label>
          <div
            className="s-checkbox-label"
          >
            <span
              id="last-updated-span"
            >
              settings_last_update
               
            </span>
            <span
              id="last-updated-span-value"
            >
              1000000
            </span>
            <span
              className="s-blue-header"
              id="update-now-span"
              onClick={[Function]}
            >
               
              database-updated-text
            </span>
          </div>
        </div>
      </div>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={true}
            id="settings-show-patterns"
            name="show_tracker_urls"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-show-patterns"
          >
            <span>
              settings_show_patterns
            </span>
          </label>
          <div
            className="s-tooltip-up"
            data-g-tooltip="settings_show_patterns_tooltip"
          >
            <img
              className="s-question"
              src="../../app/images/panel/icon-information-tooltip.svg"
            />
          </div>
        </div>
      </div>
      <h3
        className="s-special"
      >
        settings_highlight_trackers
      </h3>
      <div
        className="s-tooltip-down-click-to-play-img"
        data-g-tooltip="settings_highlight_trackers_tooltip"
      >
        <img
          className="s-question"
          src="../../app/images/panel/icon-information-tooltip.svg"
        />
      </div>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={true}
            id="settings-enable-click2play"
            name="enable_click2play"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-enable-click2play"
          >
            settings_required_trackers
          </label>
        </div>
      </div>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={true}
            id="settings-replace-social"
            name="enable_click2play_social"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-replace-social"
          >
            settings_replace_social
          </label>
        </div>
      </div>
      <h3>
        settings_blocking
      </h3>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={true}
            id="settings-individual-trackers"
            name="toggle_individual_trackers"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-individual-trackers"
          >
            <span>
              settings_individual_trackers
            </span>
          </label>
          <div
            className="s-tooltip-up"
            data-g-tooltip="settings_individual_trackers_tooltip"
          >
            <img
              className="s-question"
              src="../../app/images/panel/icon-information-tooltip.svg"
            />
          </div>
        </div>
      </div>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={true}
            id="settings-allow-trackers"
            name="ignore_first_party"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-allow-trackers"
          >
            <span>
              settings_allow_trackers
            </span>
          </label>
          <div
            className="s-tooltip-up"
            data-g-tooltip="settings_allow_trackers_tooltip"
          >
            <img
              className="s-question"
              src="../../app/images/panel/icon-information-tooltip.svg"
            />
          </div>
        </div>
      </div>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={true}
            id="settings-block-trackers"
            name="block_by_default"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-block-trackers"
          >
            settings_block_trackers
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;
